[package]
name = "firstproject"
version = "1.0.0"
license = "MIT"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"
publish = false
build = "build.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqtt = "0.30" 
pretty_env_logger = "0.3"
crossbeam-channel = "0.3.9"
sysinfo = "0.9.1"
criterion = "0.2.11"

[build-dependencies]
vcpkg = "0.2.7"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false


[[bin]]
name = "hello_world"
path = "hello_world.rs"