[package]
name = "psistats"
version = "1.0.0"
license = "MIT"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"
publish = false

[dependencies]
crossbeam-channel = "0.3.9"
get_if_addrs = "0.5.3"
hostname = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.8"
os_info = "1.1.3"
pretty_env_logger = "0.3.1"
rumqtt = "0.31.0"
scoped_threadpool = "0.1.9"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
sysinfo = "0.9.6"
systemstat = "0.1.5"
toml = "0.5.5"


[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
